<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/recipe_detail_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/step_short_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_vertical|center|start"
        android:padding="10dp"
        android:textSize="16sp" />

...
